syntax = "proto3";

package blood_glucose_monitoring;

//initialisation of service
service BloodGlucoseMonitoringService {
  //initialisation of rpc method
  rpc checkGlucoseLevels(GlucoseRequest) returns (GlucoseResponse) {}
}

message GlucoseRequest {
  string bloodGlucose = 1;
}

message GlucoseResponse {
  string message = 1;
}
